# PowerPointMakerDDB

./: .gitignore  README.md  pyproject.toml
src/: example_workflow.py  main.py  test_workflow.py
src/.spyproject/config/: workspace.ini
src/powerpoint_maker_ddb/: example_workflow.py  main.py  test_workflow.py
src/powerpoint_maker_ddb/service/: pdf_service.py  workflow_service.py
src/powerpoint_maker_ddb/src/powerpoint_maker_ddb/service/: vectors.pkl
src/powerpoint_maker_ddb/tests/: test_integration.py  test_pdf_service.py  test_workflow_service.py
src/service/: pdf_service.py  workflow_service.py
